chore: Building test